--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     <img src="assets/images/service-icon-02.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>Data Reporting</h4>
-                    <p>Lorem ipsum dolor sit amet, ctetur aoi adipiscing eliter</p>
+                    <h4>Social Media Management</h4>
+                    <p>Manage your social Media Accounts</p>
                   </div>
                 </div>
               </div>
