--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <img src="assets/images/service-icon-02.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>Social Media Management</h4>
+                    <h4>Social Management</h4>
                     <p>Manage your social Media Accounts</p>
                   </div>
                 </div>
