--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   </div>
                   <div class="right-text">
                     <h4>Social Media Management</h4>
-                    <p>Manage your social Media Accounts</p>
+                    <p>Manage social Media Accounts</p>
                   </div>
                 </div>
               </div>
