--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     <img src="assets/images/service-icon-02.png" alt="">
                   </div>
                   <div class="right-text">
-                    <h4>Social Media Management</h4>
-                    <p>Manage social Media Accounts</p>
+                    <h4>Media Management</h4>
+                    <p>Manage social Media Accounts like facebook and instagram.</p>
                   </div>
                 </div>
               </div>
